--- a/GfStudio/_Imports.razor
+++ b/GfStudio/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using GfStudio
 @using GfStudio.Layout
+@using MudBlazor
+@using GfToolkit.Shared
+@using GfToolkit.Shared.Models
