--- a/GfStudio/Layout/MainLayout.razor
+++ b/GfStudio/Layout/MainLayout.razor
@@ -3,6 +3,7 @@
 <MudThemeProvider />
 <MudDialogProvider />
 <MudSnackbarProvider />
+<MudPopoverProvider/>
 
 <MudLayout>
     @* --- 왼쪽 사이드바 (모든 페이지 공통) --- *@
