--- a/GfStudio/_Imports.razor
+++ b/GfStudio/_Imports.razor
@@ -11,3 +11,5 @@
 @using MudBlazor
 @using GfToolkit.Shared
 @using GfToolkit.Shared.Dtos.Models
+@using GfToolkit.Shared.Dtos
+@using System.Text.Json
