BehaviorEdtior도 보이는 곳은 끝냄.

--- a/GfStudio/Layout/MainLayout.razor
+++ b/GfStudio/Layout/MainLayout.razor
@@ -12,7 +12,7 @@
     <MudDrawer @bind-Open="_drawerOpen" Elevation="2" Variant="DrawerVariant.Persistent">
         <MudNavMenu Class="mt-2">
             <MudText Typo="Typo.h6" Class="px-4 py-2">Database</MudText>
-            <MudNavLink Href="/">Actors</MudNavLink>
+            <MudNavLink Href="/actors">Actors</MudNavLink>
             <MudNavLink Href="/behaviors">Behaviors</MudNavLink>
             <MudNavLink Href="/skills">Skills</MudNavLink>
             <MudNavLink Href="/items">Items</MudNavLink>
