--- a/GfStudio/Pages/StartPage.razor
+++ b/GfStudio/Pages/StartPage.razor
@@ -2,6 +2,7 @@
 @layout EmptyLayout
 @using System.Text.Json
 @using GfToolkit.Shared.Dtos
+@using GfToolkit.Shared.Dtos.Behaviors
 @inject NavigationManager NavManager
 @inject IJSRuntime JSRuntime
 
@@ -55,6 +56,9 @@
     private void CreateNewProject()
     {
         GameDataDto.Database = new GameDataDto();
+        GameDataDto.Database.BuffSets.Add(new BuffSetDto { Code = 0, Name = "New BuffSet" });
+        GameDataDto.Database.Actors.Add(new ActorDto { Code = 0, Name = "New Actor" });
+        GameDataDto.Database.Behaviors.Add(new AreaAttackBehaviorDto { Code = 0, Name = "New Behavior" });
         NavManager.NavigateTo("/actors");
     }
 
