BehaviorEditor에서 몇개의 디테일을 손봤습니다.

--- a/GfStudio/Dialogs/BuffSetPickerDialog.razor
+++ b/GfStudio/Dialogs/BuffSetPickerDialog.razor
@@ -1,6 +1,6 @@
 @using MudBlazor
 @using GfToolkit.Shared.Dtos.Models
-
+<!-- 전체 Buffset 목록을 위한 Picker. Return은 BuffsetDto 형태임>
 <MudDialog>
     <TitleContent>
         <MudText Typo="Typo.h6">Select a BuffSet</MudText>
