--- a/GfStudio/Pages/StartPage.razor
+++ b/GfStudio/Pages/StartPage.razor
@@ -58,7 +58,7 @@
         GameDataDto.Database = new GameDataDto();
         GameDataDto.Database.BuffSets.Add(new BuffSetDto { Code = 0, Name = "New BuffSet" });
         GameDataDto.Database.Actors.Add(new ActorDto { Code = 0, Name = "New Actor" });
-        GameDataDto.Database.Behaviors.Add(new AreaAttackBehaviorDto { Code = 0, Name = "New Behavior" });
+        GameDataDto.Database.Behaviors.Add(new AreaEffectBehaviorDto { Code = 0, Name = "New Behavior" });
         NavManager.NavigateTo("/actors");
     }
 
