--- a/GfStudio/Pages/BuffSetEditor.razor
+++ b/GfStudio/Pages/BuffSetEditor.razor
@@ -1,9 +1,9 @@
 @inject IDialogService DialogService
-@page "/buffsets"
+@page "/buffs"
 <DatabaseLayout>
     @*중앙: 항목 리스트 *@
     <ListContent>
-        <DataListLayout Items="_buffSets" TItem="BuffSetDto" OnItemSelected="HandleBuffSetSelected" OnBottomButtonClicked="OpenChangeMaxDialog">
+        <DataListLayout Items="_buffs" TItem="ModifierDto" OnItemSelected="HandleBuffSelected" OnBottomButtonClicked="OpenChangeMaxDialog">
             <ListItemTemplate>
                 <MudListItem Value = "context">
                     @($"{context.Code.ToString("D4")} {context.Name}")
@@ -12,26 +12,26 @@
         </DataListLayout>
     </ListContent>
     <EditorContent>
-      @* BuffSetEditor 컴포넌트의 UI 뼈대입니다. *@
-        @if (_selectedBuffSet != null)
+      @* BuffEditor 컴포넌트의 UI 뼈대입니다. *@
+        @if (_selectedBuff != null)
         {
-        @* 여기에 BuffSetEditor UI 껍데기를 넣고, 데이터를 연결합니다. *@
+        @* 여기에 BuffEditor UI 껍데기를 넣고, 데이터를 연결합니다. *@
         <MudPaper Class="pa-4" Style="height: 100%; overflow-y: auto;">
             <MudStack Spacing="4">
                 <MudText Typo="Typo.h5">Buff Set Settings</MudText>
                 
                 @* @bind-Value를 사용해 데이터를 연결합니다. *@
-                <MudTextField T="string" Label="Name" @bind-Value="_selectedBuffSet.Name" />
-                <MudTextField T="string" Label="Description" @bind-Value="_selectedBuffSet.Description" Lines="3" />
-                <MudNumericField T="int" Label="Icon ID" Variant="Variant.Outlined" Margin="Margin.Dense" @bind-Value="_selectedBuffSet.IconCode" />
-                <MudNumericField T="int" Label="Duration (Turns)" @bind-Value="_selectedBuffSet.Duration" />
+                <MudTextField T="string" Label="Name" @bind-Value="_selectedBuff.Name" />
+                <MudTextField T="string" Label="Description" @bind-Value="_selectedBuff.Description" Lines="3" />
+                <MudNumericField T="int" Label="Icon ID" Variant="Variant.Outlined" Margin="Margin.Dense" @bind-Value="_selectedBuff.IconCode" />
+                <MudNumericField T="int" Label="Duration (Turns)" @bind-Value="_selectedBuff.Duration" />
                 
                 <MudPaper Outlined="true" Class="pa-3 d-flex flex-wrap justify-space-around">
                     @* MudSwitch는 @bind-Checked를 사용합니다. *@
-                    <MudSwitch T="bool" Label="Is Buff" @bind-Value="_selectedBuffSet.IsBuff" Color="Color.Primary" />
-                    <MudSwitch T="bool" Label="Is Debuff" @bind-Value="_selectedBuffSet.IsDebuff" Color="Color.Error" />
-                    <MudSwitch T="bool" Label="Removable" @bind-Value="_selectedBuffSet.IsRemovable" Color="Color.Warning" />
-                    <MudSwitch T="bool" Label="Visible" @bind-Value="_selectedBuffSet.IsVisible" Color="Color.Info" />
+                    <MudSwitch T="bool" Label="Is Buff" @bind-Value="_selectedBuff.IsBuff" Color="Color.Primary" />
+                    <MudSwitch T="bool" Label="Is Debuff" @bind-Value="_selectedBuff.IsDebuff" Color="Color.Error" />
+                    <MudSwitch T="bool" Label="Removable" @bind-Value="_selectedBuff.IsRemovable" Color="Color.Warning" />
+                    <MudSwitch T="bool" Label="Visible" @bind-Value="_selectedBuff.IsVisible" Color="Color.Info" />
                 </MudPaper>
                 
         @* --- 개별 효과(Effects) 목록 --- *@
@@ -42,8 +42,8 @@
                 <MudIconButton Icon="@Icons.Material.Filled.Add" OnClick="OpenAddEffectDialog"/>
             </MudToolBar>
 
-            @* 1. Items에 실제 데이터(_selectedBuffSet.Effects)를 연결합니다. *@
-            <MudTable T="BuffDto" Items="_selectedBuffSet.Effects" Dense="true" Hover="true">
+            @* 1. Items에 실제 데이터(_selectedBuff.Effects)를 연결합니다. *@
+            <MudTable T="ModifierDto" Items="_selectedBuff.Effects" Dense="true" Hover="true">
                 <HeaderContent>
                     <MudTh>Effect Type</MudTh>
                     <MudTh>Summary</MudTh>
@@ -57,12 +57,12 @@
                             <MudTd><MudChip T="string" Color="Color.Info">Aura</MudChip></MudTd>
                             <MudTd>Grants Buff '@aura.AuraBuffCode' in '@aura.AuraScope' area</MudTd>
                             break;
-                        case ScalingBuffDto scaling:
-                            <MudTd><MudChip T="string" Color="Color.Secondary">Scaling Buff</MudChip></MudTd>
+                        case ScalingModifierDto scaling:
+                            <MudTd><MudChip T="string" Color="Color.Secondary">Scaling Modifier</MudChip></MudTd>
                             <MudTd>@scaling.Type : @scaling.Magnitude + (@scaling.TargetStat * @scaling.ScaleFactor)</MudTd>
                             break;
                         default:
-                            <MudTd><MudChip T="string" Color="Color.Default">Basic Buff</MudChip></MudTd>
+                            <MudTd><MudChip T="string" Color="Color.Default">Basic Modifier</MudChip></MudTd>
                             <MudTd>@context.Type : @context.Magnitude</MudTd>
                             break;
                     }
@@ -72,7 +72,7 @@
                     </MudTd>
                 </RowTemplate>
                 <NoRecordsContent>
-                    <MudText>No effects added to this BuffSet.</MudText>
+                    <MudText>No effects added to this Buff.</MudText>
                 </NoRecordsContent>
             </MudTable>
         </MudPaper>
@@ -84,7 +84,7 @@
     {
         @* --- 선택된 항목이 없을 때 보여줄 메시지 --- *@
         <MudPaper Class="d-flex align-center justify-center" Style="height: 100%;">
-            <MudText Typo="Typo.h6">Select a BuffSet from the list to edit.</MudText>
+            <MudText Typo="Typo.h6">Select a Buff from the list to edit.</MudText>
         </MudPaper>
     }
     </EditorContent>
